--- a/nav.css
+++ b/nav.css
@@ -210,3 +210,9 @@ nav .dropdown:hover .dropdown-content {
   background-color: black;
 }
 
+@media screen and (max-width: 600px) {
+.nav-links a {
+
+font-size: 12px;
+}
+}
